更新技术信息

--- a/more.html
+++ b/more.html
@@ -7,7 +7,7 @@
 <br />
 
 <h2>规则</h2>
-原则上自由。用户只需遵守自己所在国家的法律，和我们服务器所在地（旧金山）的法律。<br />
+原则上自由。用户只需遵守自己所在国家的法律，和我们服务器所在地（东京）的法律。<br />
 <br />
 除此之外的附加规则：<br />
 <ul>
@@ -39,8 +39,8 @@
     >）。用户发布消息的主语言应当是中文。可以接受英文日文等，但不应大量发布非中文内容。
   </li>
   <li>
-    本站所有域名、服务器、CDN
-    均由海外供应商提供。网络访问速度会比国内服务商略慢，也不能保证墙内持续可访问（不是我们能决定的）。
+    本站使用的基础服务均由海外供应商提供（域名 - namecheap ；服务器 - SakuraVPS ；邮件服务 - SparkPost）。
+    海外网络访问速度会比国内服务商略慢，也不能保证墙内持续可访问（不是我们能决定的）。
   </li>
   <li>
     嘟文字数上限5000字，想发什么发什么~。公开的长文请主动折叠（<a
