--- a/more.html
+++ b/more.html
@@ -13,63 +13,42 @@
 <ul>
   <li>禁止纯粹以发布广告为目的的账号。禁止平台内交易行为。</li>
   <li>
-    所有可能引起他人不适的内容，请标记NSFW，或主动折叠（<a
-      href="https://utopia.cool/web/statuses/104522674275748075"
-      target="_blank"
-      >教程</a
-    >）。
+    所有可能引起他人不适的内容，请标记NSFW，或主动折叠（<a href="https://utopia.cool/web/statuses/104522674275748075" target="_blank">教程</a>）。
   </li>
 </ul>
 
 站内管理偏向「宽容」（界定模糊时倾向于容许），所有判断由管理员做出。首犯警告，再犯隐藏，三犯封禁处理。<br />
 鼓励大家参与规则制定，这里的一切皆可协商。<br />
 本站的站长账号叫<strong>
-  <a href="https://utopia.cool/@admin" target="_blank"
-    >Benevolent Dictator</a
-  ></strong
->，请自行揣摩其中含义。
+  <a href="https://utopia.cool/@admin" target="_blank">Benevolent Dictator</a></strong>，请自行揣摩其中含义。
 
 <h2>实例特性</h2>
 <ul>
   <li>
-    本站是 Mastodon 中文实例（<a
-      href="https://utopia.cool/web/statuses/104500122838435216"
-      target="_blank"
-      >使用指南</a
-    >）。用户发布消息的主语言应当是中文。可以接受英文日文等，但不应大量发布非中文内容。
+    本站是 Mastodon 中文实例（<a href="https://utopia.cool/web/statuses/104500122838435216"
+      target="_blank">使用指南</a>）。用户发布消息的主语言应当是中文。可以接受英文日文等，但不应大量发布非中文内容。
   </li>
   <li>
     本站使用的基础服务均由海外供应商提供（域名 - namecheap ；服务器 - SakuraVPS ；邮件服务 - SparkPost）。
     海外网络访问速度会比国内服务商略慢，也不能保证墙内持续可访问（不是我们能决定的）。
   </li>
   <li>
-    嘟文字数上限5000字，想发什么发什么~。公开的长文请主动折叠（<a
-      href="https://utopia.cool/web/statuses/104522674275748075"
-      target="_blank"
-      >教程</a
-    >），避免冲击时间线给他人带来不好体验。
+    嘟文字数上限5000字，想发什么发什么~。公开的长文请主动折叠（<a href="https://utopia.cool/web/statuses/104522674275748075"
+      target="_blank">教程</a>），避免冲击时间线给他人带来不好体验。
   </li>
   <li>目前已经开启了全文搜索，用户可以搜索自己和好友发表的嘟文。</li>
   <li>
     服务器存储、带宽、流量费用开销较大。因此没有放宽对媒体文件的限制，不建议上传太大的文件。
   </li>
   <li>
-    本站用户页面不设隐藏，因此站外可以直接访问到用户发布的内容。不适合公开的内容请自行设定私密权限（<a
-      href="https://utopia.cool/web/statuses/104522821634306044"
-      target="_blank"
-      >教程</a
-    >）。时间轴上的内容可以自行设定过滤条件（<a
-      href="https://utopia.cool/web/statuses/104568953798206767"
-      target="_blank"
-      >教程</a
-    >）。
+    本站用户页面不设隐藏，因此站外可以直接访问到用户发布的内容。不适合公开的内容请自行设定私密权限（<a href="https://utopia.cool/web/statuses/104522821634306044"
+      target="_blank">教程</a>）。时间轴上的内容可以自行设定过滤条件（<a href="https://utopia.cool/web/statuses/104568953798206767"
+      target="_blank">教程</a>）。
   </li>
 </ul>
 
 <h2>管理员</h2>
-本站现有2名管理员：<a href="https://utopia.cool/@twisted" target="_blank"
-  >@twisted</a
->
+本站现有2名管理员：<a href="https://utopia.cool/@twisted" target="_blank">@twisted</a>
 <a href="https://utopia.cool/@5432688" target="_blank">@5432688</a> <br />
 <br />
 @twisted <br />
@@ -100,8 +79,7 @@
 <h2>站点运维</h2>
 
 意见和建议请联系
-<a href="https://utopia.cool/@admin" target="_blank">@admin</a
->。不一定采纳。<br />
+<a href="https://utopia.cool/@admin" target="_blank">@admin</a>。不一定采纳。<br />
 
 技术故障和紧急事务可以直接找
 <a href="https://utopia.cool/@twisted" target="_blank">@twisted</a>。<br />
@@ -112,6 +90,5 @@
 <br />
 本站不会 单方面/不加预告地 削减/限制 用户权利。<br />
 <br />
-<strong>可以保证</strong
->：管理员如果不再运营这个站点，会在关站前3个月提前告知所有用户。<br />
+<strong>可以保证</strong>：管理员如果不再运营这个站点，会在关站前3个月提前告知所有用户。<br />
 同时，本站用户如果有意承担站点运营工作（其实很大程度上是费用开销），可以从管理员处获得当前域名和服务器的转让。
