补充半年以上不活跃账号的回收规则

--- a/more.html
+++ b/more.html
@@ -15,6 +15,7 @@
   <li>
     所有可能引起他人不适的内容，请标记NSFW，或主动折叠（<a href="https://utopia.cool/web/statuses/104522674275748075" target="_blank">教程</a>）。
   </li>
+  <li>半年以上不活跃的账号将被回收。（但允许有各种例外，回收前会有确认邮件，不回邮件的才执行）</li>
 </ul>
 
 站内管理偏向「宽容」（界定模糊时倾向于容许），所有判断由管理员做出。首犯警告，再犯隐藏，三犯封禁处理。<br />
