补充存储服务商，补充GDPR条款

--- a/more.html
+++ b/more.html
@@ -1,13 +1,17 @@
 <h2>社区导向</h2>
 <p>
-  utopia.cool 是基于
-  Mastodon搭建的网络社区。致力于提供自由、友善、开放的「言论广场」。<br />
+  utopia.cool 是基于 Mastodon 搭建的网络社区。致力于提供自由、友善、开放的「言论广场」。<br />
+  虽然没有特定主题，但我们鼓励用户多跟邻居交流，走到广场上来，分享爱好，关心别人的想法和观点。<br />
   我们重视公共讨论，鼓励表达和对话，希望成员可以一起创造良好的互动体验。
 </p>
 <br />
 
 <h2>规则</h2>
 原则上自由。用户只需遵守自己所在国家的法律，和我们服务器所在地（东京）的法律。<br />
+<br />
+使用本站的服务，代表你默认接受我们将你的数据存储在境外（包括但不限于日本、美国），还代表你默认接受此行为带来的潜在风险。<br />
+尤其是身处欧洲的用户，请注意你们受到《通用数据保护条例》（<a href="https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32016R0679&from=EN"
+target="_blank">GDPR</a>）的保护。用户有权随时获取和删除自己的全部数据，在本站注册即代表你<strong>授权本站处理和储存你的数据，包括数据的国际传输</strong>。<br />
 <br />
 除此之外的附加规则：<br />
 <ul>
@@ -26,25 +30,25 @@
 <h2>实例特性</h2>
 <ul>
   <li>
-    本站是 Mastodon 中文实例（<a href="https://utopia.cool/web/statuses/104500122838435216"
+    本站是 Mastodon 中文实例（<a href="https://docs.joinmastodon.org/zh-cn/"
       target="_blank">使用指南</a>）。用户发布消息的主语言应当是中文。可以接受英文日文等，但不应大量发布非中文内容。
   </li>
   <li>
-    本站使用的基础服务均由海外供应商提供（域名 - namecheap ；服务器 - SakuraVPS ；邮件服务 - SparkPost）。
+    本站使用的基础服务均由海外供应商提供（域名 - Namecheap ；服务器 - SakuraVPS ；对象存储 - Wasabi ；邮件服务 - SparkPost）。
     海外网络访问速度会比国内服务商略慢，也不能保证墙内持续可访问（不是我们能决定的）。
   </li>
   <li>
-    嘟文字数上限5000字，想发什么发什么~。公开的长文请主动折叠（<a href="https://utopia.cool/web/statuses/104522674275748075"
-      target="_blank">教程</a>），避免冲击时间线给他人带来不好体验。
+    嘟文字数上限5000字，想发什么发什么~。公开的长文请<a href="https://utopia.cool/web/statuses/104522674275748075"
+      target="_blank">主动折叠</a>，避免冲击时间线给他人带来不好体验。
   </li>
   <li>目前已经开启了全文搜索，用户可以搜索自己和好友发表的嘟文。</li>
   <li>
     服务器存储、带宽、流量费用开销较大。因此没有放宽对媒体文件的限制，不建议上传太大的文件。
   </li>
   <li>
-    本站用户页面不设隐藏，因此站外可以直接访问到用户发布的内容。不适合公开的内容请自行设定私密权限（<a href="https://utopia.cool/web/statuses/104522821634306044"
-      target="_blank">教程</a>）。时间轴上的内容可以自行设定过滤条件（<a href="https://utopia.cool/web/statuses/104568953798206767"
-      target="_blank">教程</a>）。
+    本站用户页面不设隐藏，站外可以直接访问到用户发布的公开内容。不适合公开的内容请自行<a href="https://utopia.cool/web/statuses/104522821634306044"
+      target="_blank">设定私密权限</a>。如有时间轴上不愿看到的内容，可以自行<a href="https://utopia.cool/web/statuses/104568953798206767"
+      target="_blank">设定过滤条件</a>。
   </li>
 </ul>
 
@@ -80,7 +84,7 @@
 <h2>站点运维</h2>
 
 意见和建议请联系
-<a href="https://utopia.cool/@admin" target="_blank">@admin</a>。不一定采纳。<br />
+<a href="https://utopia.cool/@admin" target="_blank">@admin</a>。<br />
 
 技术故障和紧急事务可以直接找
 <a href="https://utopia.cool/@twisted" target="_blank">@twisted</a>。<br />
@@ -90,6 +94,7 @@
 
 <br />
 本站不会 单方面/不加预告地 削减/限制 用户权利。<br />
+但可能会经过站内讨论和公示后，删减/修改/补充站点规则。<br />
 <br />
 <strong>可以保证</strong>：管理员如果不再运营这个站点，会在关站前3个月提前告知所有用户。<br />
 同时，本站用户如果有意承担站点运营工作（其实很大程度上是费用开销），可以从管理员处获得当前域名和服务器的转让。
